--- a/Wireless-LED/NodeJS/index.html
+++ b/Wireless-LED/NodeJS/index.html
@@ -5,11 +5,14 @@
 	</head>
 	<body>
 	<h1>ESP8266 LED Control</h1>
-	<button onclick="ledOn()">LED ON</button><!--to toggle the LED-->
-	<button onclick="ledOff()">LED OFF</button><!--to toggle the LED-->
-	<button onclick="getStatus()">Get Status</button><!--to get status of the LED-->
 	
+	<button onclick="ledOn()">LED ON</button><!--button to turn LED on-->
+	<button onclick="ledOff()">LED OFF</button><!--button to turn LED off-->
+	<button onclick="getStatus()">Get Status</button><!--button to get status of the LED-->
+	
+	<!--Need jQuery-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	
 	<script>
 	function ledOn()
 	{
@@ -32,9 +35,8 @@
 		$.get("http://192.168.3.101:80/", {pin:"STATS"}).done(function(data, status)
 		{
 			alert( "Data " + data);
-			//console.log('RECEIVED'+data);
+			//work in progress
 		});
-		
 	}
 	</script>
 	</body>
